[tool.poetry]
name = "riverbot"
version = "0.1.0"
description = "A Telegram Bot to ask of all Python Developer Proposal if it is remote"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = ""
homepage = ""


[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^2.2.3"
fastapi = {version = "^0.54.1", extras = ["all"]}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
